<resources>
    <string name="app_name">萝趣升级助手</string>
    <string name="app_bar_title">萝趣设备升级平台</string>

    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>


    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="list_title_nav">大屏列表</string>
    <string name="title_home">显控综合管理系统</string>
    <string name="plan_list">预案列表</string>
    <string name="login_title">萝趣设备升级系统</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pass_hint">请输入密码\u3000</string>
    <string name="setting">设置</string>
    <string name="login_text_hint">登录</string>

    <string name="search_hint_text">帮你找到感兴趣的镜头</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 历史搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>

    <string name="version_new_hint">发现新版本</string>
    <string name="version_commit_hint">立即升级</string>

    <string name="login_empty_hint">账号为空</string>
    <string name="pass_empty_hint">密码为空</string>
    <string name="pass_error_hint">账号或者密码不正确</string>

    <string name="error_data_hint">数据异常</string>
    <string name="new_version_hint">当前最新版</string>
    <string name="error_update_hint">升级异常</string>
    <string name="signal">信号源</string>
    <string name="device_id">设备ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_code_get">获取验证码</string>

</resources>
